// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots renders App component correctly 1`] = `
<BrowserRouter>
  <Connect(AppHeader) />
  <AppBody />
  <AppFooter />
</BrowserRouter>
`;

exports[`App snapshots renders index component correctly when loaded is false 1`] = `
<div
  className="App container"
>
  <LoadingAnimation />
</div>
`;

exports[`App snapshots renders index component correctly when loaded is true 1`] = `
<div
  className="App container"
>
  <App />
</div>
`;
